--- a/app/src/main/res/layout/activity_user_dashboard.xml
+++ b/app/src/main/res/layout/activity_user_dashboard.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/user_dashboard_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UserDashboard">
@@ -62,6 +63,7 @@
     </TableRow>
 
     <ScrollView
+        android:id="@+id/user_dashboard_scroll_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/navbar"
@@ -85,105 +87,86 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/age_text"
+                android:id="@+id/age_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="48dp"
 
-                android:layout_marginTop="16dp"
-                android:text="TextView"
+                android:text="@string/age_label"
                 android:textSize="18sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/user_dashboard_subgreeting" />
+                app:layout_constraintBaseline_toBaselineOf="@+id/enter_age"
+                app:layout_constraintEnd_toEndOf="@+id/weight_label" />
 
             <TextView
-                android:id="@+id/weight_text"
+                android:id="@+id/weight_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="48dp"
-                android:layout_marginTop="8dp"
-                android:text="TextView"
+                android:layout_marginStart="16dp"
+                android:text="@string/weight_label"
                 android:textSize="18sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/age_text" />
+                app:layout_constraintBaseline_toBaselineOf="@+id/enter_weight"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
-                android:id="@+id/height_text"
+                android:id="@+id/height_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="48dp"
-                android:layout_marginTop="8dp"
-                android:text="TextView"
+                android:text="@string/height_label"
                 android:textSize="18sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/weight_text" />
+                app:layout_constraintBaseline_toBaselineOf="@+id/enter_height"
+                app:layout_constraintEnd_toEndOf="@+id/weight_label" />
 
             <EditText
                 android:id="@+id/enter_age"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="24dp"
+                android:width="100dp"
                 android:ems="10"
                 android:hint="@string/age_message"
                 android:inputType="number"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/height_text" />
+                android:maxLength="3"
+                android:textSize="18sp"
+                app:layout_constraintStart_toEndOf="@+id/age_label"
+                app:layout_constraintTop_toBottomOf="@+id/user_dashboard_subgreeting" />
 
             <EditText
                 android:id="@+id/enter_weight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="8dp"
+                android:width="100dp"
                 android:ems="10"
                 android:hint="@string/weight_message"
                 android:inputType="number"
-                app:layout_constraintStart_toStartOf="parent"
+                android:maxLength="3"
+                android:textSize="18sp"
+                app:layout_constraintStart_toEndOf="@+id/weight_label"
                 app:layout_constraintTop_toBottomOf="@+id/enter_age" />
 
             <EditText
                 android:id="@+id/enter_height"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="8dp"
+                android:width="100dp"
                 android:ems="10"
                 android:hint="@string/height_message"
                 android:inputType="number"
-                app:layout_constraintStart_toStartOf="parent"
+                android:maxLength="3"
+                android:textSize="18sp"
+                app:layout_constraintStart_toEndOf="@+id/height_label"
                 app:layout_constraintTop_toBottomOf="@+id/enter_weight" />
 
             <Button
-                android:id="@+id/age_button"
+                android:id="@+id/update_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
                 android:onClick="updateUserDetails"
-                android:text="@string/update_age_message"
+                android:text="@string/update_dashboard_data_message"
                 android:textSize="12sp"
-                app:layout_constraintBaseline_toBaselineOf="@+id/enter_age"
-                app:layout_constraintStart_toEndOf="@+id/enter_age" />
-
-            <Button
-                android:id="@+id/weight_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:onClick="updateUserDetails"
-                android:text="@string/update_weight_message"
-                android:textSize="12sp"
-                app:layout_constraintBaseline_toBaselineOf="@+id/enter_weight"
-                app:layout_constraintStart_toEndOf="@+id/enter_weight" />
-
-            <Button
-                android:id="@+id/height_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:onClick="updateUserDetails"
-                android:text="@string/update_height_message"
-                android:textSize="12sp"
-                app:layout_constraintBaseline_toBaselineOf="@+id/enter_height"
-                app:layout_constraintStart_toEndOf="@+id/enter_height" />
+                app:layout_constraintStart_toStartOf="@+id/enter_height"
+                app:layout_constraintTop_toBottomOf="@+id/enter_height" />
 
             <TextView
                 android:id="@+id/user_dashboard_welcome_prompt"
