--- a/app/src/main/res/layout/activity_exercise_dashboard.xml
+++ b/app/src/main/res/layout/activity_exercise_dashboard.xml
@@ -2,11 +2,13 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/exercise_dashboard"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ExerciseDashboard">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/exercise_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
