--- a/app/src/main/res/layout/fragment_sleep_tab1.xml
+++ b/app/src/main/res/layout/fragment_sleep_tab1.xml
@@ -8,13 +8,13 @@
     <!-- TODO: Update blank fragment layout -->
 
     <com.github.mikephil.charting.charts.BarChart
-        android:id="@+id/BarChart1"
+        android:id="@+id/weekly_bar_chart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="300dp"
-        android:layout_marginTop="32dp"/>
+        android:layout_marginBottom="100dp" />
 
 
 </FrameLayout>
