--- a/app/src/main/res/layout/activity_add_workout.xml
+++ b/app/src/main/res/layout/activity_add_workout.xml
@@ -170,13 +170,34 @@
     <Button
         android:id="@+id/add_exercise_submit_button"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:onClick="addWorkout"
         android:text="@string/submit_new_exercise"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/delete_exercise_submit_button"
+        app:layout_constraintEnd_toStartOf="@+id/update_exercise_submit_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sport_layout" />
+
+    <Button
+        android:id="@+id/update_exercise_submit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="updateWorkout"
+        android:text="@string/update_existing_exercise"
+        app:layout_constraintBaseline_toBaselineOf="@+id/add_exercise_submit_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/add_exercise_submit_button" />
+
+    <Button
+        android:id="@+id/delete_exercise_submit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="deleteExercise"
+        android:text="@string/delete_exercise"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/add_exercise_submit_button" />
 
     <Button
         android:id="@+id/add_date_button"
@@ -252,18 +273,6 @@
         android:text="@string/no_time_set_label"
         app:layout_constraintStart_toStartOf="@+id/add_time_button"
         app:layout_constraintTop_toBottomOf="@+id/add_time_button" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:onClick="deleteExercise"
-        android:text="@string/delete_exercise"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/add_exercise_submit_button" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
